Bootstrap quote highscore view and presentation and fix button on pending
Initiates the view for rendering the quotes with the highest score.
Renders the first 10 quotes with the highest score from a given
semester string, and then another 10 rendered by all time.
In addition the view returns a a combined zip list which can
be used in the future so the table rendered in the template
can be styled as pairs of quotes, altough it needs handling
for when the lists are uneven which might happen at the beginning
of a new semester.

--- a/quotes/static/quotes/css/quotes.css
+++ b/quotes/static/quotes/css/quotes.css
@@ -1,3 +1,8 @@
+* {
+
+    box-sizing: border-box
+
+}
 
 .no-bullet {
     list-style-type: none;
@@ -24,7 +29,7 @@
 
 
 .quote__griditem {
-    margin: 10px;
+    margin: 20px 10px 20px;
 }
 
 .quote_item__footer {
@@ -77,27 +82,21 @@
 
 }
 
-.quote_pending_footer_left {
+.pending__submit_button {
     background-color: #0D2C39;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #ffffff;
+    color:white;
     border-radius: 5px;
-    height: 32px;
-    margin-right: 10px;
+    width: 170px;
+    height:30px;
+
 }
 
-.quote_pending_footer_right {
-    background-color: #6E0D30;
-    width: 100%;
-    margin-left: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 5px;
-    height: 32px;
-    color:white;
 
+
+.pending__delete_button {
+    background-color: #6E0D30;
+    border-radius: 5px;
+    color: white;
+    width: 170px;
+    height:30px;
 }
